--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,11 +15,14 @@ security:
             security: false
 
         main:
-            lazy: true
-            provider: app_user_provider
+            logout:
+                path: app_logout
             form_login:
                 login_path: app_login
-                check_path: app_login
+                check_path: app_login 
+            lazy: true
+            provider: app_user_provider
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -30,7 +33,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/compte, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
